data/usersCode/zdmns/question1/error.txt
/home/gauravghati/clash/data/usersCode/zdmns/question1/code1-1.cpp:1:1: error: expected unqualified-id before ‘,’ token
 ,dsnfbsnmd
 ^
/home/gauravghati/clash/data/usersCode/zdmns/question1/code1-1.cpp:1:2: error: expected constructor, destructor, or type conversion at end of input
 ,dsnfbsnmd
  ^~~~~~~~~
